--- a/USTG_MG.AppWin32/Atividades/FaltasEAtrasos/List.resx
+++ b/USTG_MG.AppWin32/Atividades/FaltasEAtrasos/List.resx
@@ -165,4 +165,7 @@
   <metadata name="toolStrip3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>402, 17</value>
   </metadata>
+  <metadata name="faId.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
